mp32/etc/sysconfig/iptables
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate NEW -m tcp -p tcp --dport 22 -j DROP
-A INPUT -m conntrack --ctstate NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m conntrack --ctstate NEW -m tcp -p tcp --dport 443 -j ACCEPT
-A INPUT -m conntrack --ctstate NEW -m tcp -p tcp --dport 5432 -j ACCEPT
-A INPUT -m conntrack --ctstate NEW -m tcp -p tcp --dport 50069 -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 6668 -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 6669 -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 25565 -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 25566 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
